// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StealthCopiable should renders correctly 1`] = `
<DocumentFragment>
  .cache-ncek46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  min-width: 0;
}

.cache-ncek46:hover .elgyjs73 {
  opacity: 1;
  cursor: pointer;
}

.cache-1qkz5jq {
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.cache-oldbq4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-jnefdr {
  background-color: transparent;
  border: none;
  color: #4F0599;
  display: inline-block;
  padding: 0 8px;
  line-height: 1;
  opacity: 0;
  z-index: 100;
}

.cache-jnefdr:focus {
  opacity: 1;
}

<div
    class="cache-ncek46 elgyjs71"
  >
    <span
      class="cache-1qkz5jq elgyjs70"
    >
      Hello
    </span>
    <span
      class="cache-oldbq4 elgyjs72"
    >
      <button
        aria-live="polite"
        class="cache-jnefdr elgyjs73"
        tabindex="0"
        type="button"
      >
        Copy
      </button>
    </span>
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with a complex children 1`] = `
<DocumentFragment>
  .cache-ncek46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  min-width: 0;
}

.cache-ncek46:hover .elgyjs73 {
  opacity: 1;
  cursor: pointer;
}

.cache-oldbq4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-jnefdr {
  background-color: transparent;
  border: none;
  color: #4F0599;
  display: inline-block;
  padding: 0 8px;
  line-height: 1;
  opacity: 0;
  z-index: 100;
}

.cache-jnefdr:focus {
  opacity: 1;
}

.cache-1qkz5jq {
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="cache-ncek46 elgyjs71"
  >
    <span
      class="cache-oldbq4 elgyjs72"
    >
      <button
        aria-live="polite"
        class="cache-jnefdr elgyjs73"
        tabindex="0"
        type="button"
      >
        Copied
      </button>
    </span>
    <span
      class="cache-1qkz5jq elgyjs70"
    >
      <div>
        <span>
          Hello
        </span>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with custom side 1`] = `
<DocumentFragment>
  .cache-ncek46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  min-width: 0;
}

.cache-ncek46:hover .elgyjs73 {
  opacity: 1;
  cursor: pointer;
}

.cache-oldbq4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-jnefdr {
  background-color: transparent;
  border: none;
  color: #4F0599;
  display: inline-block;
  padding: 0 8px;
  line-height: 1;
  opacity: 0;
  z-index: 100;
}

.cache-jnefdr:focus {
  opacity: 1;
}

.cache-1qkz5jq {
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="cache-ncek46 elgyjs71"
  >
    <span
      class="cache-oldbq4 elgyjs72"
    >
      <button
        aria-live="polite"
        class="cache-jnefdr elgyjs73"
        tabindex="0"
        type="button"
      >
        Copy
      </button>
    </span>
    <span
      class="cache-1qkz5jq elgyjs70"
    >
      Hello
    </span>
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with custom side 2`] = `
<DocumentFragment>
  .cache-ncek46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  min-width: 0;
}

.cache-ncek46:hover .elgyjs73 {
  opacity: 1;
  cursor: pointer;
}

.cache-oldbq4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-jnefdr {
  background-color: transparent;
  border: none;
  color: #4F0599;
  display: inline-block;
  padding: 0 8px;
  line-height: 1;
  opacity: 0;
  z-index: 100;
}

.cache-jnefdr:focus {
  opacity: 1;
}

.cache-1qkz5jq {
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="cache-ncek46 elgyjs71"
  >
    <span
      class="cache-oldbq4 elgyjs72"
    >
      <button
        aria-live="polite"
        class="cache-jnefdr elgyjs73"
        tabindex="0"
        type="button"
      >
        Copied
      </button>
    </span>
    <span
      class="cache-1qkz5jq elgyjs70"
    >
      Hello
    </span>
  </div>
</DocumentFragment>
`;
